# code-healer

./: .env.example  .gitignore  LICENSE  README.md  compose.localstack.yml  init-aws.sh  lambda_package.sh  new_deploy.sh  pyproject.toml  requirements.txt
.github/workflows/: test-local.yml
docs/architecture/: PROJECT_STRUCTURE.md  SYSTEM_ARCHITECTURE.md
docs/guides/: LOCAL_DEPLOYMENT.md
local-mock-services/: Dockerfile.sagemaker  sagemaker_mock.py
scripts/: start-local.sh  stop-local.sh  test-local.sh
src/: lambda_handler.py  requirements.txt
src/agent/: __init__.py  core_agent.py  event_processor.py  failure_analyzer.py  feedback_system.py  knowledge_retriever.py  remediation_coordinator.py
src/integrations/: __init__.py  argocd_client.py  github_client.py  kubernetes_client.py  sagemaker_client.py  slack_client.py
src/utils/: config.py  logger.py
terraform/: backend.tf  main.tf  outputs.tf  provider-override.tf  terraform.tfvars.example  variables.tf
terraform/environments/: dev.tfvars  local.tfvars  staging.tfvars
terraform/evironments/: prod.tfvars
terraform/modules/api_gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  output.tf  variables.tf
terraform/modules/opensearch/: main.tf  outputs.tf  variables.tf
terraform/modules/sagemaker/: main.tf  outputs.tf  variables.tf
terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
