[project]
name = "code-healer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.1",
    "black>=25.9.0",
    "boto3>=1.40.55",
    "botocore>=1.40.55",
    "cryptography>=46.0.3",
    "flake8>=7.3.0",
    "jsonschema>=4.25.1",
    "kubernetes>=33.1.0",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "moto>=5.1.15",
    "mypy>=1.18.2",
    "numpy>=2.2.6",
    "opensearch-py>=3.0.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pygithub>=2.8.1",
    "pylint>=4.0.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "slack-sdk>=3.37.0",
    "tenacity>=9.1.2",
    "urllib3>=2.5.0",
]
